--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -37,6 +37,7 @@ env:
     # absolute wild tbh https://stackoverflow.com/a/75503402
     DISPLAY: ':99.0'
     OIDC_RSA_PRIVATE_KEY: ${{ secrets.OIDC_RSA_PRIVATE_KEY }}
+    RUNS_ON_INTERNAL_PR: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false }}
 
 permissions:
     contents: write
