feat(ci-hobby): add preview deployment mode with droplet reuse
Add hobby-preview label support to enable persistent preview deployments:
- Detects hobby-preview label on PRs and enables preview mode
- Preview mode searches for existing droplet by PR tag (pr:{number})
- If found, updates deployment via SSH (update .env, pull images, restart)
- If not found, creates new droplet with stable name (do-ci-hobby-pr-{number})
- Smoke test mode (no label) continues to create ephemeral droplets
- Re-enable destroy step but only for smoke tests (not preview mode)

SSH update methods added:
- run_ssh_command(): Execute commands on droplet via paramiko
- find_existing_droplet_for_pr(): Search droplets by DO tag
- update_existing_deployment(): Zero-downtime update via docker-compose

Preview deployments get stable DNS (do-ci-hobby-pr-{number}.posthog.cc)
and persist across commits until PR is closed or label removed.

--- a/.github/workflows/ci-hobby.yml
+++ b/.github/workflows/ci-hobby.yml
@@ -56,10 +56,31 @@ jobs:
                   python-version: '3.8'
             - name: Get python deps
               run: pip install python-digitalocean==1.17.0 requests==2.28.1
+            - name: Check for preview mode
+              id: check-preview
+              run: |
+                  if [ "${{ github.event_name }}" = "pull_request" ]; then
+                    LABELS=$(gh pr view ${{ github.event.pull_request.number }} --json labels -q '.labels[].name' 2>/dev/null || echo "")
+                    if echo "$LABELS" | grep -q "hobby-preview"; then
+                      echo "PREVIEW_MODE=true" >> $GITHUB_ENV
+                      echo "preview=true" >> $GITHUB_OUTPUT
+                      echo "🔄 Preview mode enabled - will reuse droplet if exists"
+                    else
+                      echo "PREVIEW_MODE=false" >> $GITHUB_ENV
+                      echo "preview=false" >> $GITHUB_OUTPUT
+                      echo "🧪 Smoke test mode - ephemeral droplet"
+                    fi
+                  else
+                    echo "PREVIEW_MODE=false" >> $GITHUB_ENV
+                    echo "preview=false" >> $GITHUB_OUTPUT
+                  fi
+              env:
+                  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Setup DO Hobby Instance
               run: python3 bin/hobby-ci.py create "$GITHUB_HEAD_REF" "${{ github.run_id }}-${{ github.run_attempt }}" "${{ github.sha }}" "${{ github.event.pull_request.number || 'unknown' }}"
               env:
                   DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
+                  DIGITALOCEAN_SSH_PRIVATE_KEY: ${{ secrets.DO_DEPLOY_SSH_PRIVATE_KEY }}
             - name: Run smoke tests on DO
               id: test
               timeout-minutes: 30
@@ -88,11 +109,11 @@ jobs:
                       /tmp/droplet_info.txt
                       /tmp/docker-compose-logs.txt
                   if-no-files-found: warn
-            # - name: Post-cleanup step
-            #   if: always()
-            #   run: python3 bin/hobby-ci.py destroy
-            #   env:
-            #       DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
+            - name: Post-cleanup step
+              if: always() && env.PREVIEW_MODE == 'false'
+              run: python3 bin/hobby-ci.py destroy
+              env:
+                  DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
             - name: Check test result
               if: always()
               run: |
