--- a/.github/workflows/pr-droplet-deploy.yml
+++ b/.github/workflows/pr-droplet-deploy.yml
@@ -157,6 +157,37 @@ jobs:
                     export DEBIAN_FRONTEND=noninteractive
                     apt-get update
 
+                    # Install direnv
+                    if ! command -v direnv &> /dev/null; then
+                      echo "Installing direnv..."
+                      apt-get install -y direnv
+                    fi
+
+                    # Install Docker
+                    if ! command -v docker &> /dev/null; then
+                      echo "Installing Docker..."
+                      apt-get install -y ca-certificates curl
+                      install -m 0755 -d /etc/apt/keyrings
+                      curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+                      chmod a+r /etc/apt/keyrings/docker.asc
+
+                      echo \
+                        "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+                        $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+                        tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+                      apt-get update
+                      apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+
+                      # Start Docker service
+                      systemctl start docker
+                      systemctl enable docker
+
+                      # Verify Docker installation
+                      docker --version
+                      docker compose version
+                    fi
+
                     # Install flox
                     if ! command -v flox &> /dev/null; then
                       echo "Installing flox..."
