--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,16 +13,17 @@ services:
             file: docker-compose.base.yml
             service: proxy
         ports:
-            - 127.0.0.1:8010:8000
+            - 8010:8000
         extra_hosts:
             - 'web:host-gateway'
             - 'plugins:host-gateway'
             - 'capture:host-gateway'
             - 'replay-capture:host-gateway'
             - 'feature-flags:host-gateway'
+            - 'vite:host-gateway'
         environment:
             CADDYFILE: |
-                http://localhost:8000 {
+                :8000 {
                     @replay-capture {
                         path /s
                         path /s/*
@@ -52,6 +53,16 @@ services:
                         path /public/m/*
                     }
 
+                    @vite {
+                        path /@vite/*
+                        path /@react-refresh
+                        path /@fs/*
+                        path /@id/*
+                        path /src/*
+                        path /node_modules/*
+                        path /products/*
+                    }
+
                     handle @capture {
                         reverse_proxy capture:3307
                     }
@@ -66,6 +77,10 @@ services:
 
                     handle @webhooks {
                         reverse_proxy plugins:6738
+                    }
+
+                    handle @vite {
+                        reverse_proxy vite:8234
                     }
 
                     handle {
