--- a/pyproject.toml
+++ b/pyproject.toml
@@ -203,7 +203,7 @@ dev = [
     "djangorestframework-stubs~=3.16.0",
     "faker==17.5.0",
     "fakeredis[lua]==2.23.3",
-    "flaky==3.7.0",
+    "pytest-rerunfailures~=16.1",
     "freezegun==1.2.2",
     "inline-snapshot==0.19.*",
     "ipython>=9.3.0",
@@ -219,16 +219,16 @@ dev = [
     "prance==23.6.21.0",
     "pyarrow==18.1.0",
     "pyarrow-stubs==17.16",
-    "pytest==8.0.2",
-    "pytest-asyncio==0.21.1",
-    "pytest-cov==4.1.0",
+    "pytest~=8.4.2",
+    "pytest-asyncio~=1.3.0",
+    "pytest-cov~=7.0.0",
     "pytest-django~=4.11.1",
-    "pytest-env==0.8.2",
-    "pytest-icdiff==0.6",
-    "pytest-mock==3.15.0",
-    "pytest-split==0.9.0",
+    "pytest-env~=1.2.0",
+    "pytest-icdiff~=0.9",
+    "pytest-mock~=3.15.1",
+    "pytest-split~=0.10.0",
     "pytest-watch==4.2.0",
-    "pytest-xdist==3.6.1",
+    "pytest-xdist~=3.8.0",
     "python-dateutil>=2.8.2",
     "requests-mock>=1.12.1",
     "responses==0.23.1",
