refactor: store s3 blobs in multipart format

--- a/rust/capture/Cargo.toml
+++ b/rust/capture/Cargo.toml
@@ -53,6 +53,7 @@ assert-json-diff = { workspace = true }
 anyhow = { workspace = true }
 axum-test-helper = { git = "https://github.com/posthog/axum-test-helper.git" }
 futures = { workspace = true }
+httparse = "1.8"
 once_cell = { workspace = true }
 rand = { workspace = true }
 rdkafka = { workspace = true }
