--- a/pyproject.toml
+++ b/pyproject.toml
@@ -184,6 +184,7 @@ dependencies = [
     "gitpython>=3.1.44",
     "duckdb>=1.3.0",
     "bingads>=13.0.25.3",
+    "markdown-to-mrkdwn>=0.2.0",
 ]
 
 [dependency-groups]
