--- a/.github/workflows/ci-hobby.yml
+++ b/.github/workflows/ci-hobby.yml
@@ -8,6 +8,7 @@ on:
         branches:
             - 'release-*.*'
     pull_request:
+        types: [opened, synchronize, labeled]
         paths:
             - docker-compose.base.yml
             - docker-compose.hobby.yml
@@ -81,40 +82,74 @@ jobs:
                   fi
               env:
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Setup DO Hobby Instance
-              run: python3 bin/hobby-ci.py create "$GITHUB_HEAD_REF" "${{ github.run_id }}-${{ github.run_attempt }}" "${{ github.sha }}" "${{ github.event.pull_request.number || 'unknown' }}" 2>&1 | tee /tmp/hobby-ci-output.txt
-              env:
-                  DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
-                  DIGITALOCEAN_SSH_PRIVATE_KEY: ${{ secrets.DO_DEPLOY_SSH_PRIVATE_KEY }}
-            - name: Delete existing PR comment
-              if: github.event_name == 'pull_request' && env.PREVIEW_MODE == 'true'
+            - name: Post initial PR comment
+              if: github.event_name == 'pull_request'
               uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b
               with:
                   script: |
                       const commentMarker = '<!-- hobby-ci-comment -->';
+                      const previewMode = process.env.PREVIEW_MODE === 'true';
+
+                      // Find existing comment to update (in case of workflow retry)
                       const { data: comments } = await github.rest.issues.listComments({
                           owner: context.repo.owner,
                           repo: context.repo.repo,
                           issue_number: context.issue.number,
                       });
 
-                      for (const comment of comments) {
-                          if (comment.body.includes(commentMarker)) {
-                              await github.rest.issues.deleteComment({
-                                  owner: context.repo.owner,
-                                  repo: context.repo.repo,
-                                  comment_id: comment.id,
-                              });
-                              console.log(`Deleted existing comment ${comment.id}`);
-                          }
+                      const existingComment = comments.find(c => c.body.includes(commentMarker));
+
+                      const initialBody = `${commentMarker}
+                      ## 🦔 Hobby deployment instance
+
+                      ${previewMode ? '🔄 **Preview mode** - Reusing or creating persistent droplet' : '🧪 **Smoke test mode** - Creating ephemeral droplet'}
+
+                      ⏳ Setting up instance... (this takes ~15 minutes)
+
+                      **Commit:** \`${context.sha.substring(0, 7)}\`
+                      **Workflow run:** [#${context.runNumber}](${context.payload.repository.html_url}/actions/runs/${context.runId})
+                      `;
+
+                      let commentId;
+                      if (existingComment) {
+                          // Update existing comment
+                          await github.rest.issues.updateComment({
+                              owner: context.repo.owner,
+                              repo: context.repo.repo,
+                              comment_id: existingComment.id,
+                              body: initialBody,
+                          });
+                          commentId = existingComment.id;
+                          console.log(`Updated existing comment ${commentId}`);
+                      } else {
+                          // Create new comment
+                          const { data: newComment } = await github.rest.issues.createComment({
+                              owner: context.repo.owner,
+                              repo: context.repo.repo,
+                              issue_number: context.issue.number,
+                              body: initialBody,
+                          });
+                          commentId = newComment.id;
+                          console.log(`Created new comment ${commentId}`);
                       }
-            - name: Post PR comment with instance info
-              if: github.event_name == 'pull_request' && env.PREVIEW_MODE == 'true'
+
+                      // Save comment ID for later update
+                      const fs = require('fs');
+                      fs.appendFileSync(process.env.GITHUB_ENV, `HOBBY_COMMENT_ID=${commentId}\n`);
+            - name: Setup DO Hobby Instance
+              run: python3 bin/hobby-ci.py create "$GITHUB_HEAD_REF" "${{ github.run_id }}-${{ github.run_attempt }}" "${{ github.sha }}" "${{ github.event.pull_request.number || 'unknown' }}" 2>&1 | tee /tmp/hobby-ci-output.txt
+              env:
+                  DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
+                  DIGITALOCEAN_SSH_PRIVATE_KEY: ${{ secrets.DO_DEPLOY_SSH_PRIVATE_KEY }}
+            - name: Update PR comment with instance info
+              if: github.event_name == 'pull_request' && env.HOBBY_COMMENT_ID
               uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b # v7.1.0
               with:
                   script: |
                       const fs = require('fs');
                       const commentMarker = '<!-- hobby-ci-comment -->';
+                      const commentId = process.env.HOBBY_COMMENT_ID;
+                      const previewMode = process.env.PREVIEW_MODE === 'true';
 
                       let output = '';
                       try {
@@ -127,13 +162,35 @@ jobs:
                           ? fs.readFileSync('/tmp/droplet_info.txt', 'utf8')
                           : '';
 
+                      // Parse droplet info for nice display
+                      let instanceUrl = '';
+                      let sshCommand = '';
+                      let dropletIp = '';
+                      if (dropletInfo) {
+                          const urlMatch = dropletInfo.match(/URL: (.*)/);
+                          const sshMatch = dropletInfo.match(/SSH: (.*)/);
+                          const ipMatch = dropletInfo.match(/Droplet IP: (.*)/);
+                          if (urlMatch) instanceUrl = urlMatch[1];
+                          if (sshMatch) sshCommand = sshMatch[1];
+                          if (ipMatch) dropletIp = ipMatch[1];
+                      }
+
                       const commentBody = `${commentMarker}
                       ## 🦔 Hobby deployment instance
 
-                      ${dropletInfo ? '### Instance details\n```\n' + dropletInfo + '```\n\n' : ''}
-                      ### Deployment output
+                      ${previewMode ? '✅ **Preview deployment ready**' : '✅ **Smoke test instance ready**'}
+
+                      ${instanceUrl ? `### 🌐 Access the instance\n**URL:** ${instanceUrl}\n` : ''}
+                      ${sshCommand ? `**SSH:** \`${sshCommand}\`\n` : ''}
+                      ${dropletIp ? `**IP:** \`${dropletIp}\`\n` : ''}
+
+                      **Commit:** \`${context.sha.substring(0, 7)}\`
+                      **Workflow run:** [#${context.runNumber}](${context.payload.repository.html_url}/actions/runs/${context.runId})
+
+                      ${dropletInfo ? '\n<details>\n<summary>Full instance details</summary>\n\n```\n' + dropletInfo + '```\n</details>\n' : ''}
+
                       <details>
-                      <summary>Click to expand</summary>
+                      <summary>Deployment output</summary>
 
                       \`\`\`
                       ${output}
@@ -141,10 +198,10 @@ jobs:
                       </details>
                       `;
 
-                      await github.rest.issues.createComment({
+                      await github.rest.issues.updateComment({
                           owner: context.repo.owner,
                           repo: context.repo.repo,
-                          issue_number: context.issue.number,
+                          comment_id: parseInt(commentId),
                           body: commentBody,
                       });
             - name: Run smoke tests on DO
