--- a/.github/workflows/ci-hobby.yml
+++ b/.github/workflows/ci-hobby.yml
@@ -30,7 +30,7 @@ jobs:
             preview-mode: ${{ steps.check-preview.outputs.preview }}
             comment-id: ${{ steps.post-comment.outputs.comment-id }}
         steps:
-            - name: Check for preview mode
+            - name: 'Check for preview mode'
               id: check-preview
               run: |
                   LABELS=$(gh pr view ${{ github.event.pull_request.number }} --json labels -q '.labels[].name' 2>/dev/null || echo "")
@@ -112,11 +112,69 @@ jobs:
                   ref: ${{ github.event.pull_request.head.sha }}
                   timeoutSeconds: 3600
                   intervalSeconds: 30
+            - name: Update comment - Docker build failed
+              if: always() && steps.wait-for-image.outputs.conclusion != 'success'
+              uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b
+              with:
+                  script: |
+                      const commentMarker = '<!-- hobby-ci-comment -->';
+                      const commentId = '${{ steps.post-comment.outputs.comment-id }}';
+                      const buildConclusion = '${{ steps.wait-for-image.outputs.conclusion }}';
+
+                      const errorBody = `${commentMarker}
+                      ## 🦔 Hobby deployment instance
+
+                      ❌ **Docker image build failed**
+
+                      The Docker image build did not complete successfully (status: ${buildConclusion}).
+
+                      **What to do:**
+                      - Check the [Docker build workflow](${context.payload.repository.html_url}/actions/runs/${context.runId})
+                      - Look for build errors in the container image build step
+                      - Fix any Dockerfile syntax errors or dependency issues
+                      - Push a new commit to retry
+
+                      **Commit:** \`${context.sha.substring(0, 7)}\`
+                      **Workflow run:** [#${context.runNumber}](${context.payload.repository.html_url}/actions/runs/${context.runId})
+                      `;
+
+                      await github.rest.issues.updateComment({
+                          owner: context.repo.owner,
+                          repo: context.repo.repo,
+                          comment_id: parseInt(commentId),
+                          body: errorBody,
+                      });
             - name: Fail if Docker build failed
               if: steps.wait-for-image.outputs.conclusion != 'success'
               run: |
                   echo "Docker image build failed with conclusion: ${{ steps.wait-for-image.outputs.conclusion }}"
                   exit 1
+            - name: Update comment - Docker image ready
+              if: steps.wait-for-image.outputs.conclusion == 'success'
+              uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b
+              with:
+                  script: |
+                      const commentMarker = '<!-- hobby-ci-comment -->';
+                      const commentId = '${{ steps.post-comment.outputs.comment-id }}';
+                      const previewMode = '${{ steps.check-preview.outputs.preview }}' === 'true';
+
+                      const updatedBody = `${commentMarker}
+                      ## 🦔 Hobby deployment instance
+
+                      ${previewMode ? '🔄 **Preview mode** - Reusing or creating persistent droplet' : '🧪 **Smoke test mode** - Creating ephemeral droplet'}
+
+                      ✅ Docker image ready, creating instance...
+
+                      **Commit:** \`${context.sha.substring(0, 7)}\`
+                      **Workflow run:** [#${context.runNumber}](${context.payload.repository.html_url}/actions/runs/${context.runId})
+                      `;
+
+                      await github.rest.issues.updateComment({
+                          owner: context.repo.owner,
+                          repo: context.repo.repo,
+                          comment_id: parseInt(commentId),
+                          body: updatedBody,
+                      });
 
     changes:
         runs-on: ubuntu-24.04
@@ -140,26 +198,71 @@ jobs:
               run: pip install python-digitalocean==1.17.0 requests==2.28.1 paramiko
             - name: Set environment variables from previous job
               run: |
-                  if [ "${{ github.event_name }}" = "pull_request" ]; then
-                    PREVIEW_MODE="${{ needs.wait-for-docker-image.outputs.preview-mode }}"
-                    COMMENT_ID="${{ needs.wait-for-docker-image.outputs.comment-id }}"
-                    echo "PREVIEW_MODE=$PREVIEW_MODE" >> $GITHUB_ENV
-                    echo "HOBBY_COMMENT_ID=$COMMENT_ID" >> $GITHUB_ENV
-                    if [ "$PREVIEW_MODE" = "true" ]; then
-                      echo "🔄 Preview mode enabled - will reuse droplet if exists"
-                    else
-                      echo "🧪 Smoke test mode - ephemeral droplet"
-                    fi
-                  else
-                    echo "PREVIEW_MODE=false" >> $GITHUB_ENV
-                  fi
+                  echo "PREVIEW_MODE=${{ github.event_name == 'pull_request' && needs.wait-for-docker-image.outputs.preview-mode || 'false' }}" >> $GITHUB_ENV
+                  echo "HOBBY_COMMENT_ID=${{ needs.wait-for-docker-image.outputs.comment-id }}" >> $GITHUB_ENV
             - name: Setup DO Hobby Instance
               run: python3 bin/hobby-ci.py create "$GITHUB_HEAD_REF" "${{ github.run_id }}-${{ github.run_attempt }}" "${{ github.sha }}" "${{ github.event.pull_request.number || 'unknown' }}" 2>&1 | tee /tmp/hobby-ci-output.txt
               env:
                   DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
                   DIGITALOCEAN_SSH_PRIVATE_KEY: ${{ secrets.DO_DEPLOY_SSH_PRIVATE_KEY }}
-            - name: Update PR comment with instance info
+            - name: Update comment - Instance created
               if: github.event_name == 'pull_request' && env.HOBBY_COMMENT_ID
+              uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b
+              with:
+                  script: |
+                      const fs = require('fs');
+                      const commentMarker = '<!-- hobby-ci-comment -->';
+                      const commentId = process.env.HOBBY_COMMENT_ID;
+                      const previewMode = process.env.PREVIEW_MODE === 'true';
+
+                      const dropletInfo = fs.existsSync('/tmp/droplet_info.txt')
+                          ? fs.readFileSync('/tmp/droplet_info.txt', 'utf8')
+                          : '';
+
+                      // Parse droplet info for quick access
+                      let instanceUrl = '';
+                      if (dropletInfo) {
+                          const urlMatch = dropletInfo.match(/URL: (.*)/);
+                          if (urlMatch) instanceUrl = urlMatch[1];
+                      }
+
+                      const updatedBody = `${commentMarker}
+                      ## 🦔 Hobby deployment instance
+
+                      ${previewMode ? '🔄 **Preview mode** - Reusing or creating persistent droplet' : '🧪 **Smoke test mode** - Creating ephemeral droplet'}
+
+                      ✅ Instance created, running smoke tests...
+                      ${instanceUrl ? `\n🌐 **URL:** ${instanceUrl}` : ''}
+
+                      **Commit:** \`${context.sha.substring(0, 7)}\`
+                      **Workflow run:** [#${context.runNumber}](${context.payload.repository.html_url}/actions/runs/${context.runId})
+                      `;
+
+                      await github.rest.issues.updateComment({
+                          owner: context.repo.owner,
+                          repo: context.repo.repo,
+                          comment_id: parseInt(commentId),
+                          body: updatedBody,
+                      });
+                        - name: Run smoke tests on DO
+              id: test
+              timeout-minutes: 30
+              run: |
+                  set +e
+                  python3 bin/hobby-ci.py test
+                  echo "TEST_EXIT_CODE=$?" >> $GITHUB_ENV
+                  exit 0
+              env:
+                  DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
+            - name: Generate demo data
+              if: env.TEST_EXIT_CODE == '0' && env.PREVIEW_MODE == 'true' && env.HOBBY_DROPLET_NEW == 'true'
+              timeout-minutes: 15
+              run: python3 bin/hobby-ci.py generate-demo-data
+              env:
+                  DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
+                  DIGITALOCEAN_SSH_PRIVATE_KEY: ${{ secrets.DO_DEPLOY_SSH_PRIVATE_KEY }}
+            - name: Update PR comment with final status
+              if: always() && github.event_name == 'pull_request' && env.HOBBY_COMMENT_ID
               uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b # v7.1.0
               with:
                   script: |
@@ -167,6 +270,7 @@ jobs:
                       const commentMarker = '<!-- hobby-ci-comment -->';
                       const commentId = process.env.HOBBY_COMMENT_ID;
                       const previewMode = process.env.PREVIEW_MODE === 'true';
+                      const testExitCode = process.env.TEST_EXIT_CODE;
 
                       let output = '';
                       try {
@@ -192,19 +296,83 @@ jobs:
                           if (ipMatch) dropletIp = ipMatch[1];
                       }
 
+                      // Determine status
+                      const testPassed = testExitCode === '0';
+                      const instanceCreated = dropletInfo !== '';
+
+                      let statusEmoji = '✅';
+                      let statusText = previewMode ? 'Preview deployment ready' : 'Smoke test passed';
+                      let errorSection = '';
+
+                      if (!instanceCreated) {
+                          statusEmoji = '❌';
+                          statusText = 'Instance creation failed';
+                          errorSection = `
+                      ### ❌ Deployment Error
+
+                      The instance could not be created. Check the deployment output below for details.
+
+                      **Troubleshooting:**
+                      - Check if DigitalOcean API is accessible
+                      - Verify DIGITALOCEAN_TOKEN secret is valid
+                      - Review cloud-init logs in the workflow artifacts
+
+                      **Workflow logs:** [View full logs](${context.payload.repository.html_url}/actions/runs/${context.runId})
+                      `;
+                      } else if (!testPassed) {
+                          statusEmoji = '❌';
+                          statusText = 'Smoke tests failed';
+
+                          // Get last 30 lines of cloud-init logs if available
+                          let recentLogs = '';
+                          try {
+                              const cloudInitLogs = fs.readFileSync('/tmp/cloud-init-output.log', 'utf8');
+                              const logLines = cloudInitLogs.trim().split('\n');
+                              recentLogs = logLines.slice(-30).join('\n');
+                          } catch (e) {
+                              recentLogs = 'Could not fetch cloud-init logs';
+                          }
+
+                          errorSection = `
+                      ### ❌ Test Failure
+
+                      The deployment was created but health checks failed.
+
+                      **Quick diagnostics:**
+                      ${instanceUrl ? `- Try accessing manually: ${instanceUrl}` : ''}
+                      ${sshCommand ? `- SSH to debug: \`${sshCommand}\`\n  Then run: \`tail -f /var/log/cloud-init-output.log\`\n  And: \`docker-compose logs\`` : ''}
+
+                      <details>
+                      <summary>Recent cloud-init logs (last 30 lines)</summary>
+
+                      \`\`\`
+                      ${recentLogs}
+                      \`\`\`
+                      </details>
+
+                      **Common issues:**
+                      - Container failed to start (check docker-compose logs)
+                      - Database migration issues (check postgres/clickhouse logs)
+                      - Out of memory (instance needs 4GB+)
+
+                      **Full logs:** Check workflow artifacts or [view logs](${context.payload.repository.html_url}/actions/runs/${context.runId})
+                      `;
+                      }
+
                       const commentBody = `${commentMarker}
                       ## 🦔 Hobby deployment instance
 
-                      ${previewMode ? '✅ **Preview deployment ready**' : '✅ **Smoke test instance ready**'}
+                      ${statusEmoji} **${statusText}**
 
                       ${instanceUrl ? `### 🌐 Access the instance\n**URL:** ${instanceUrl}\n` : ''}
                       ${sshCommand ? `**SSH:** \`${sshCommand}\`\n` : ''}
                       ${dropletIp ? `**IP:** \`${dropletIp}\`\n` : ''}
 
+                      **Mode:** ${previewMode ? '🔄 Preview (persistent)' : '🧪 Smoke test (ephemeral)'}
                       **Commit:** \`${context.sha.substring(0, 7)}\`
                       **Workflow run:** [#${context.runNumber}](${context.payload.repository.html_url}/actions/runs/${context.runId})
-
-                      ${dropletInfo ? '\n<details>\n<summary>Full instance details</summary>\n\n```\n' + dropletInfo + '```\n</details>\n' : ''}
+                      ${errorSection}
+                      ${dropletInfo && testPassed ? '\n<details>\n<summary>Full instance details</summary>\n\n```\n' + dropletInfo + '```\n</details>\n' : ''}
 
                       <details>
                       <summary>Deployment output</summary>
@@ -221,23 +389,6 @@ jobs:
                           comment_id: parseInt(commentId),
                           body: commentBody,
                       });
-            - name: Run smoke tests on DO
-              id: test
-              timeout-minutes: 30
-              run: |
-                  set +e
-                  python3 bin/hobby-ci.py test
-                  echo "TEST_EXIT_CODE=$?" >> $GITHUB_ENV
-                  exit 0
-              env:
-                  DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
-            - name: Generate demo data
-              if: env.TEST_EXIT_CODE == '0' && env.PREVIEW_MODE == 'true' && env.HOBBY_DROPLET_NEW == 'true'
-              timeout-minutes: 15
-              run: python3 bin/hobby-ci.py generate-demo-data
-              env:
-                  DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
-                  DIGITALOCEAN_SSH_PRIVATE_KEY: ${{ secrets.DO_DEPLOY_SSH_PRIVATE_KEY }}
             - name: Fetch logs after test
               if: always()
               run: python3 bin/hobby-ci.py fetch-logs || echo "Could not fetch logs"
