--- a/docker-compose.hobby.yml
+++ b/docker-compose.hobby.yml
@@ -113,6 +113,8 @@ services:
             OTEL_SERVICE_NAME: 'posthog'
             OTEL_EXPORTER_OTLP_ENDPOINT: ''
             OTEL_SDK_DISABLED: 'true'
+            USE_GRANIAN: 'true'
+            GRANIAN_WORKERS: '2'
         depends_on:
             - db
             - redis
