fix(docker): exclude node_modules and __pycache__ from build context
Local builds were sending 551 MB to Docker vs 1.18 MB after fix.
Missing exclusions for plugin-server/node_modules (556 MB),
ee/**/node_modules, docs/**/node_modules, and __pycache__ dirs.

Also fixes products/*/node_modules -> products/**/node_modules
to catch nested paths like products/mcp/typescript/node_modules.

--- a/.dockerignore
+++ b/.dockerignore
@@ -55,7 +55,11 @@ common/*/*/node_modules
 common/*/node_modules
 common/*/*/dist
 common/*/dist
-products/*/node_modules
+products/**/node_modules
+plugin-server/node_modules
+ee/**/node_modules
+docs/**/node_modules
+**/__pycache__
 rust/.env
 rust/.github
 rust/cyclotron-node/dist
