add ci type checks, formatting and tests for gateway

--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -50,6 +50,8 @@ jobs:
                         # hogli CLI changes need validation
                         - 'common/hogli/**'
                         - 'bin/**'
+                        # LLM Gateway service
+                        - 'services/llm-gateway/**/*.py'
 
     code-quality:
         needs: changes
