--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -1166,10 +1166,19 @@ jobs:
                   python-version: '3.12'
 
             - name: Install uv
-              uses: astral-sh/setup-uv@v3
+              uses: astral-sh/setup-uv@3259c6206f993105e3a61b142c2d97bf4b9ef83d # v7.1.0
 
             - name: Install dependencies
               run: uv sync --frozen --dev
+
+            - name: Run ruff check
+              run: uv run ruff check .
+
+            - name: Run ruff format check
+              run: uv run ruff format --check .
+
+            - name: Run mypy
+              run: uv run mypy src/
 
             - name: Run tests
               env:
