add llm gateway to mprocs, default off

--- a/bin/mprocs.yaml
+++ b/bin/mprocs.yaml
@@ -125,5 +125,9 @@ procs:
         shell: 'bin/check_postgres_up && cd hedgebox-dummy && pnpm install && pnpm run dev'
         autostart: false
 
+    llm-gateway:
+        shell: 'bin/check_postgres_up && bin/start-llm-gateway'
+        autostart: false
+
 mouse_scroll_speed: 1
 scrollback: 10000
